swipekube/templates/spring-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-nodeport
spec:
  type: NodePort
  selector:
    app: spring-hello
  ports:
  - protocol: TCP
    port: 9090
    targetPort : 8080
    nodePort: 31000
