swipekube/templates/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
spec:
  rules:
  - host: springldap.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
           name: spring-nodeport
           port: 
            number: 9090
